Add Reflect as a dependency in the plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: SimpleLaser
 author: Flowsqy
 version: ${project.version}
 main: fr.flowsqy.simplelaser.SimpleLaserPlugin
+depend:
+  - Reflect
