--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: SimpleLaser
 author: Flowsqy
 version: ${project.version}
 main: fr.flowsqy.simplelaser.SimpleLaserPlugin
+api-version: "1.16"
 depend:
   - Reflect
 commands: 
