--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>fr.flowsqy.simplelaser</groupId>
     <artifactId>simplelaser-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <modules>
         <module>plugin</module>
         <module>nms/interface</module>
