--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>plugin</module>
         <module>nms/interface</module>
         <module>nms/reflection</module>
+        <module>nms/v1_17_R1</module>
         <module>nms/v1_17_1_R1</module>
     </modules>
 
@@ -54,17 +55,17 @@
             <!-- Internal shaded dependencies -->
             <dependency>
                 <groupId>fr.flowsqy.simplelaser</groupId>
-                <artifactId>simplelaser-nms</artifactId>
-                <version>1.0.0</version>
-            </dependency>
-            <dependency>
-                <groupId>fr.flowsqy.simplelaser</groupId>
                 <artifactId>simplelaser-nms-interface</artifactId>
                 <version>1.0.0</version>
             </dependency>
             <dependency>
                 <groupId>fr.flowsqy.simplelaser</groupId>
                 <artifactId>simplelaser-nms-reflection</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.flowsqy.simplelaser</groupId>
+                <artifactId>simplelaser-nms-v1_17_R1</artifactId>
                 <version>1.0.0</version>
             </dependency>
             <dependency>
