--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -26,6 +26,10 @@
         </dependency>
         <dependency>
             <groupId>fr.flowsqy.simplelaser</groupId>
+            <artifactId>simplelaser-nms-v1_17_R1</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fr.flowsqy.simplelaser</groupId>
             <artifactId>simplelaser-nms-v1_17_1_R1</artifactId>
         </dependency>
     </dependencies>
