--- a/nms/v1_17_1_R1/pom.xml
+++ b/nms/v1_17_1_R1/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <spigot.version>1.17.1-R0.1-SNAPSHOT</spigot.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
