--- a/nms/v1_17_R1/pom.xml
+++ b/nms/v1_17_R1/pom.xml
@@ -14,6 +14,8 @@
     <version>1.0.0</version>
 
     <properties>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
         <spigot.version>1.17-R0.1-SNAPSHOT</spigot.version>
     </properties>
 
