Add 1.18 and 1.18.1 support

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>nms/reflection</module>
         <module>nms/v1_17_R1</module>
         <module>nms/v1_17_1_R1</module>
+        <module>nms/v1_18_R1</module>
     </modules>
 
     <properties>
@@ -71,6 +72,11 @@
             <dependency>
                 <groupId>fr.flowsqy.simplelaser</groupId>
                 <artifactId>simplelaser-nms-v1_17_1_R1</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.flowsqy.simplelaser</groupId>
+                <artifactId>simplelaser-nms-v1_18_R1</artifactId>
                 <version>1.0.0</version>
             </dependency>
         </dependencies>
