--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -32,6 +32,10 @@
             <groupId>fr.flowsqy.simplelaser</groupId>
             <artifactId>simplelaser-nms-v1_17_1_R1</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.flowsqy.simplelaser</groupId>
+            <artifactId>simplelaser-nms-v1_18_R1</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
