Add 1.19, 1.19.1 and 1.19.2 support

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -40,6 +40,10 @@
             <groupId>fr.flowsqy.simplelaser</groupId>
             <artifactId>simplelaser-nms-v1_18_R2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.flowsqy.simplelaser</groupId>
+            <artifactId>simplelaser-nms-v1_19_R1</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
