--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>nms/v1_17_1_R1</module>
         <module>nms/v1_18_R1</module>
         <module>nms/v1_18_R2</module>
+        <module>nms/v1_19_R1</module>
     </modules>
 
     <properties>
@@ -41,7 +42,7 @@
             <dependency>
                 <groupId>org.spigotmc</groupId>
                 <artifactId>spigot-api</artifactId>
-                <version>1.18.2-R0.1-SNAPSHOT</version>
+                <version>1.19.2-R0.1-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -83,6 +84,11 @@
             <dependency>
                 <groupId>fr.flowsqy.simplelaser</groupId>
                 <artifactId>simplelaser-nms-v1_18_R2</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.flowsqy.simplelaser</groupId>
+                <artifactId>simplelaser-nms-v1_19_R1</artifactId>
                 <version>1.0.0</version>
             </dependency>
         </dependencies>
