--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -6,5 +6,5 @@ api-version: "1.13"
 commands:
   laser:
     description: Create a laser
-    usage: /laser <startX> <startY> <startZ> <endX> <endY> <endZ> <duration> <distance>
+    usage: /laser <args>
     permission: simplelaser.command
