--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>nms/interface</module>
         <module>nms/reflection</module>
         <module>nms/v1_17_R1</module>
-        <module>nms/v1_17_1_R1</module>
+        <module>nms/v1_17_R2</module>
         <module>nms/v1_18_R1</module>
         <module>nms/v1_18_R2</module>
         <module>nms/v1_19_R1</module>
@@ -73,7 +73,7 @@
             </dependency>
             <dependency>
                 <groupId>fr.flowsqy.simplelaser</groupId>
-                <artifactId>simplelaser-nms-v1_17_1_R1</artifactId>
+                <artifactId>simplelaser-nms-v1_17_R2</artifactId>
                 <version>1.0.0</version>
             </dependency>
             <dependency>
