--- a/nms/v1_17_R2/pom.xml
+++ b/nms/v1_17_R2/pom.xml
@@ -3,10 +3,9 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>simplelaser-parent</artifactId>
+        <artifactId>simplelaser-nms</artifactId>
         <groupId>fr.flowsqy.simplelaser</groupId>
-        <version>1.1.3</version>
-        <relativePath>../../pom.xml</relativePath>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,8 +14,6 @@
 
     <properties>
         <spigot.version>1.17.1-R0.1-SNAPSHOT</spigot.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
