--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -18,31 +18,7 @@
         </dependency>
         <dependency>
             <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-interface</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-reflection</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-v1_17_R1</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-v1_17_R2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-v1_18_R1</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-v1_18_R2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.flowsqy.simplelaser</groupId>
-            <artifactId>simplelaser-nms-v1_19_R1</artifactId>
+            <artifactId>simplelaser-nms-all</artifactId>
         </dependency>
     </dependencies>
 
@@ -57,9 +33,6 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
-                <includes>
-                    <include>*.yml</include>
-                </includes>
             </resource>
         </resources>
     </build>
