--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -21,6 +21,7 @@
         <module>v1_18_R1</module>
         <module>v1_18_R2</module>
         <module>v1_19_R1</module>
+        <module>v1_20_R2</module>
         <module>all</module>
     </modules>
 
@@ -67,6 +68,11 @@
             <dependency>
                 <groupId>fr.flowsqy.simplelaser</groupId>
                 <artifactId>simplelaser-nms-v1_19_R1</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.flowsqy.simplelaser</groupId>
+                <artifactId>simplelaser-nms-v1_20_R2</artifactId>
                 <version>1.0.0</version>
             </dependency>
         </dependencies>
