--- a/nms/all/pom.xml
+++ b/nms/all/pom.xml
@@ -52,6 +52,10 @@
             <groupId>fr.flowsqy.simplelaser</groupId>
             <artifactId>simplelaser-nms-v1_20_R2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.flowsqy.simplelaser</groupId>
+            <artifactId>simplelaser-nms-v1_21_R1</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
