Move to paper only

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SimpleLaser
 author: Flowsqy
-version: ${project.version}
+version: ${version}
 main: fr.flowsqy.simplelaser.SimpleLaserPlugin
 api-version: "1.13"
 commands:
